# Tiks

./: Cargo.toml  Makefile.toml  README.md  build.rs  home.html  setup.sh
.github/workflows/: release.yml  rust.yml
code_to_zip/: Cargo.toml  logo.rc
code_to_zip/src/: argment.rs  build_logo.rs  command.rs  flag.rs  lib.rs  start_logo.rs  zip_code.rs
code_to_zip/test/: hello.html
command/: Cargo.toml  build.rs
command/c_build/: README.md
command/c_build/c/: example.c
command/src/: arg.rs  cache.rs  code.rs  command.rs  download.rs  lib.rs  root.rs  run.rs  start_logo.rs  state_code.rs  test.rs
command/src/c_build/: README.md  build_c.sh
command/src/commands/: apt.rs  arg.rs  code.rs  command.rs  download.rs  mod.rs
command/src/env/: mod.rs
command/src/get/: get_hty.rs  mod.rs  priority.rs
command/src/priority/: mod.rs
command/src/process/: add_task.rs  mod.rs  process.rs  task_command.rs  thread.rs
command/src/set/: mod.rs  set.rs
command/test/: explain.py  hello.html  task.list
mac/: setup.sh
mac_linux/: setup.sh
window/: setup.bat
