[package]
name = "command"
version = "1.0.0"
edition = "2021" 
authors = ["Zhangzijie <zzj01262022@163.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
lazy_static = { version = "1.4.0"}
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
webbrowser = "0.8"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"
dirs = "5.0"
rpassword = "7.3.0"
libc = "0.2.153"
base64 = "0.22.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
term_size = "0.3.0"
termion = "3.0.0"

[[bin]]
name = "tiks"
path = "bin/main.rs"

[build]
target_name = "tiks"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"


[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

